# stuck-with-codes

./: .gitignore  README.md
algorithms/bearrobotics/: compute.py  string_to_num.py  tok.py
algorithms/leetcode/august/: README.md  detect_capitals.py  my_hash_set.py
android/app/: build.gradle
awk/basics/: add_y.sh  example_bashvar.sh  example_ifin.sh  example_mergeboth.sh  execute_aggregation.sh  execute_merge.sh  execute_select.sh  inline_ext_var.sh  inputfile  select.sh
awk/tutorials/: example.awk  execute.sh  haiku.txt
bash/: error.err  install_dev_environment.sh  xiny.sh
bash/basics/: array_args.sh  cut_columns.sh  filtered_mock.csv  subshells.sh
bash/usenix/: usenix.sh
bash/xiny/: output.out
biopython/: .gitignore  Untitled.ipynb  install.sh  requirements.txt
c/essentialc/: advanced_pointers.c  basic_types.c  controls.c  data_types.c  functions.c  odds_and_ends.c  operators_stl.c
c/xiny/: intro.c
cmake/learnxiny/: CMakeLists.txt
cpp/basics/: .gitignore  a.out  char_str.cpp  clear_executables.sh  fill_vector.cpp  input_parser.cpp  read_char.cpp  read_csv.cpp  read_file.cpp  rotate_vector.cpp  slice_vector.cpp  taylor.cpp  virtual_code.cpp  write_csv.cpp
cpp/read_json/: .gitignore  CMakeLists.txt  label_mapping.json  read_json.cpp  read_map.cpp
cpp/seal_example/: CMakeLists.txt
cpp/xiny/: compare_c.cpp  dog.cpp  dog.hpp  enum.cpp  function.cpp  owneddog.cpp  owneddog.hpp  point.cpp  point.hpp  reference.cpp  template.cpp
cryptography/fftw/: install.sh
cryptography/ntl/: README.md  install.sh
cryptography/ntl/src/: hello.cpp  (+1 more)
flutter/: install_macosx.sh
flutter/testdrive/: pubspec.yaml
frontend/html/: xiny.html
go/: install_macosx.sh  install_ubuntu.sh  xiny.go
go/gobyexample/: arrays.go  atomic_counters.go  channel_buffering.go  channel_directions.go  channel_synchronization.go  channels.go  closing_channels.go  closure.go  collections.go  constants.go  defer.go  errors.go  forloop.go  functions.go  goroutines.go  hello-world.go  ifelse.go  interfaces.go  links.md  map.go  methods.go  mutexes.go  non_blocking_channel.go  panic.go  pointers.go  range.go  range_over_channel.go  rate_limiting.go  recursion.go  ret_vals.go  select.go  slices.go  sorting.go  sorting_by_functions.go  stateful_goroutines.go  structs.go  switch.go  tickers.go  timeouts.go  timers.go  (+4 more)
go/lattigo/: go.mod  go.sum  main.go  main_test.go
go/practice-go/: README.md
gradle/: README.md  install_macosx.sh  install_ubuntu.sh
gradle/java_demo/: build.gradle  settings.gradle
gradle/java_web/: build.gradle  settings.gradle
gradle/kotlin_toy/: build.gradle.kts  settings.gradle.kts
gradle/toy/: README.md  build.gradle
groovy/: install_macosx.sh  xiny.groovy
homoencrypt/: 8_combined.cpp  8_combined.txt  8_desilo.cpp  8_desilo.txt  CMakeLists.txt  examples.cpp  examples.h
java/cs108/: build.gradle  settings.gradle
java/effective/: CreateObjects.java
java/toy/: HelloWorld.java  build.gradle  settings.gradle
java/websocket/: build.gradle  settings.gradle
java/xiny/: BasicTypes.java  ClassDesign.java  Intermediate.java  Lambdas.java
javascript/: install_es_runtime.sh
javascript/codewars/: add_big_number.js  bst.js  human_time.js  lcs_perform.js  package-lock.json  package.json  paren_gen.js  smaller.js  smaller_array.js  test.js
javascript/d3js/: axis.html  circles.html  selection.html
javascript/es6/: arrow_again.js  bind.js  call_apply.js  closure.js  currying.js  errors.js  functions.js  iterators.js  js_fundamentals.js  primitives.js  proxy_reflect.js  rest_parameters.js
javascript/functional/: become_functional.js
javascript/nodejs/: install_nodejs.sh
javascript/vuejs/: vue-hackernews-note
julia/: install_macosx.sh
julia/xiny/: primitive.jl
kotlin/: install_macosx.sh  xiny.kt
kotlin/amaze/: README.md  settings.gradle.kts
kotlin/coroutines/: build.gradle.kts  settings.gradle.kts
learning/cs221/: .gitignore
lua/: install_macosx.sh  xiny.lua
markdown/: xiny.md
mlearning/cs221/: cs221_env.sh
mysql/: install_5.7_macosx.sh
oauth/google/: front.html
openmined/federated_learning/: README.md
openssl/: create_cert.sh
pandas/: .gitignore  install.sh
perl/tutorial/: array.pl  control.pl  files.pl  hash.pl  regex.pl  string.pl  subroutines.pl
protobuf/: example.proto  example_pb.js  example_pb2.py  package.json  run.sh
python/: requirements.txt  set_default_python.sh  xiny_class.py  xiny_gen_dec.py  xiny_primitives.py
python/asyncio/: event_poll.py  event_poll_2.py  hello.py  pool_of_async_threads.py  say_after.py
python/basics/: async_generator.py  classmethods.py  flip_matrix.py  generator.py  subclass_abstractmethod.py  time_hatch.py  try_catch_finally.py
python/cppimport/: cppmodule.cpp
python/effective/: classes.py  functions.py  metaclasses.py
python/fastapi/: main.py  router.py
python/multithreading/: multiprocessing_builtin.py  multiprocessing_pathos.py
python/sockets/: client.py  server.py
python/tours/: howdoi.py
python/xiny/: xiny_func.py
pytorch/: .gitignore  convnet_sentdex.ipynb  requirements.txt  torch-net.state  torch_blitz.ipynb
pytorch/.ipynb_checkpoints/: torchbasics_sentdex-checkpoint.ipynb
quantum/qiskit/: .gitignore  constants.py  requirements.txt
ruby/: install_macosx.sh
rust/: install.sh
seq/: install_macosx.sh
solidity/truffle/: README.md
sqlite3/: .tutorial.sql.swp
swift/: Contents.swift
swift/xiny/: Contents.swift
vim/: commands.vim  macros.vim  modes.vim  navigation.vim  tricks.vim
websocket/fastapi/: server.py
(+247 files in other folders)
